updated l10n strings, added CS, MN, MS

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -10,8 +10,8 @@ af:
   about title:                                  "Aangaande YouVersion"
   make a donation:                              "Maak 'n Skenking"
   thanks for your donation:                     "Dankie vir jou skenking!"
-  thanks authorization:                         "Dankie vir jou skenking!  Jou magtigingskode is %{code}."
-  donation error:                               "Ons is jammer, maar iets het verkeerd geloop met jou skenking. Probeer asseblief weer."
+  thanks authorization:                         "As jy 'n kwitansie versoek het sal jy dit binnekort per e-pos ontvang. "
+  donation error:                               "Ons is jammer, maar iets het verkeerd geloop met jou skenking. Die fout was: %{error_text}"
   created ago:                                  "%{time_ago} terug geskep"
   copy:                                         "Kopieer"
   copy confirmed:                               "Gekopieer!"
@@ -218,8 +218,8 @@ af:
     edit devices:                               "Gekoppelde Toestelle"
     edit account_existence:                     "Sluit Rekening"
     delete account button:                      "Sluit My YouVersion Rekening"
-    no devices:                                 "Geen toestelle gekoppel aan jou YouVersion rekening nie"
-    no devices download copy:                   "Gebaseer op die aanlyn Bybel, YouVersion.com, is die Bybel App 'n gratis mobiele Bybel wat op bykans enige toestel geinstalleer kan word. Die Bybel App laat gebruikers toe om die Bybel te lees, verse te deel met sosiale netwerke, gunsteling gedeeltes te boekmerk en vele meer"
+    no devices:                                 "Geen toestelle gekoppel aan jou YouVersion Rekening nie"
+    no devices download copy:                   "Gebaseer op die aanlyn Bybel, YouVersion.com, is die Bybel App 'n gratis mobiele Bybel wat op bykans enige toestel geinstalleer kan word. Die Bybel App laat gebruikers toe om die Bybel te lees, verse te deel met sosiale netwerke, gunsteling gedeeltes te boekmerk en vele meer&mdash:alles in 'n formaat wat tred hou met jou snelgroeiende mobiele leefstyl. Besoek <a href='http://www.youversion.com/download'>youversion.com/download</a>  van jou mobiele toestel om die Bybel App af te laai en koppel jou rekening!"
     yes delete:                                 "Ja, Sluit My Rekening"
     account delete success:                     "Jou YouVersion rekening is suksesvol gesluit. Ons hoop dat jy sal voortgaan om betekenisvolle maniere te vind om interaktief met die Bybel te verkeer. Van hierdie apps mag dalk handig te pas kom soos jy aanbeweeg:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "As jy jou rekening sluit, sal jy permanent van al jou informasie, geskiedenis, en verpersoonliking (soos notas, boekmerke, kleurmerke, ens.) binne YouVersion.com en die Bible App geillimineer word. Hierdie aksie kan nie deur jou of ons span omgekeer word nie. Indien jy seker is dat jy wil aangaan, gaan voort hieronder."
@@ -427,7 +427,7 @@ af:
     about this plan:                            "Oor Hierdie Plan"
     about the publisher:                        "Oor Die Uitgewer"
     day:                                        "Dag"
-    month:                                      "Maand"
+    month:                                      "Kalender"
     publisher:                                  "Uitgewer"
     success widget title:                       "Maak die Beste van jou Lees Plan"
     success blurb:                              "Leesplanne is die beste manier om God se Woord deel van jou daaglikse lewe te maak. Maar feitlik almal raak een of ander tyd agter. Om te hoor wat God elke dag vir ons wil sê is belangrik, so ons het 'n paar wenke bymekaargesit om jou te help om op datum te bly."
@@ -524,7 +524,7 @@ af:
     suggestion html:                            "Het jy bedoel %{suggestion_link}?"
     all versions:                               "Alle %{language_name} Weergawes"
   donate:
-    donate now:                                 "Skenk Nou"
+    donate now:                                 "Skenk Nou (VSA)"
     donate now intl:                            "of skenk internasionaal"
     promo 1:                                    "Vir elke $1 wat jy skenk, kan 'n addisionele 10 mense toegang verkry tot die Bybel op hul selfoon."
     promo 2:                                    "Met YouVersion is die Bybel altyd byderhand. Kyk na ons video."
@@ -549,7 +549,7 @@ af:
     zip:                                        "Poskode"
   download ad:
     title:                                      "Laai die Free Bible App af"
-    line 1:                                     "Honderde weergawes in baie"
+    line 1:                                     "Honderde weergawes in 100+"
     line 2:                                     "verskillende tale - die Bybel wat"
     line 3:                                     "orals saam met jou gaan."
     download:                                   "Laai Nou Af"
@@ -560,7 +560,7 @@ af:
     information revolution copy:                "Oor die laaste dekade, het die Internet 'n revolusie teweeg gebring wat mense bemagtig soos nog nooit tevore nie. Met die vermoë om te deel, by te dra, te skep, uit te saai en te kommunikeer, is dit maklik om uit te druk wie ons is en wat ons glo met die res van die wêreld."
     youversion copy:                            "Sedert sy stigting in 1996, was dit LifeChurch.tv se doel om mense te lei om ten volle gewyde volgelinge van Christus te word. Deur dit te doen, het ons gekyk na nuwe maniere om mense te help die Bybel te verbind aan hul daaglikse lewe. Ons metodes het oor die jare verander soos ons verskillende tegnieke en strategieë ingelyf het. Maar aan die kern, bly ons fokus op die relevansie as ons voortdurend daarna streef om aan te toon en die mense te leer hoe God se Woord toepaslik is vir almal, maak nie saak waar hulle is in die lewe."
     youversion copy 2:                          "YouVersion verteenwoordig 'n nuwe grens in LifeChurch.tv se pogings. Ons bou nie net 'n instrument om 'n impak te maak in die wêreld deur gebruik te maak van innoverende tegnologie nie, meer belangrik, ons is besig om mense te betrek in 'n verhouding met God as hulle die toepaslikheid van die Bybel vir hul lewens ontdek."
-    partners title:                             "'n Spesiale Woord Van Dank Vir Ons Venote"
+    partners title:                             "Bybel Publiserende Vennote"
     partners text:                              "Sonder ons vrygewige Bybel publiseer vennote, sal YouVersion eenvoudig nie in staat wees om ons wêreldwye gemeenskap te verskaf met so baie Bybels nie.  Baie van julle het gevra hoe julle hierdie ondersteuners van die YouVersion missie kan bedank vir hul noodsaaklike ondersteuning. Jy kan meer leer oor hulle, hul bedieninge, en maniere wat julle hulle kan ondersteun deur die skakels hier onder."
     translation title:                          "Ons Vertalings Spanne"
     learn more:                                 "Leer Meer "
@@ -599,7 +599,8 @@ af:
   mobile page:
     h2:                                         "God se Woord is by jou."
     h3:                                         "YouVersion is Globaal"
-    h3 sub:                                     "Beskikbaar in honderde tale wêreldwyd."
+    h3 sub:                                     "Beskikbaar in meer as 'n 100 tale wêreldwyd.
+"
     main:                                       "Mense by die miljoene gebruik die Bible App™ om God se Woord deel van hul daaglikse lewens te maak. Laai die gratis app af om toegang tot jou boekmerke, notas en leesplanne van enige plek af te verkry. Geniet honderde weergawes, insluitende klank, alles op jou mobiele toestel."
     button h4:                                  "Gaan na youversion.com/download"
     button h4 sub:                              "Op Jou Mobiele Toestel"
