--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -10,8 +10,8 @@ bg:
   about title:                                  "Относно YouVersion"
   make a donation:                              "Направи дарение"
   thanks for your donation:                     "Благодарим ви за дарението"
-  thanks authorization:                         "Благодарим ви за дарението. Вашият код е: %{code}."
-  donation error:                               "Грешка. Опитайте отново."
+  thanks authorization:                         "Касов бон от транзакцията ще ви бъде изпратен по вл.поща."
+  donation error:                               "Грешка при дарението. Кодът на грешката е: %{error_text}"
   created ago:                                  "Създадено преди %{time_ago}"
   copy:                                         "Копирай"
   copy confirmed:                               "Копирано!"
@@ -218,7 +218,7 @@ bg:
     edit devices:                               "Свързани устройства"
     edit account_existence:                     "Изтрий профила"
     delete account button:                      "Изтрий профила ми с YouVersion "
-    no devices:                                 "No devices connected to your YouVersion Account"
+    no devices:                                 "YouVersion профила ти няма свързано устройство "
     no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Да, изтрий профила ми"
     account delete success:                     "Твоят профил с YouVersion е изтрит. Надяваме се да продължиш да използваш Библията чрез следните приложения: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
@@ -427,7 +427,7 @@ bg:
     about this plan:                            "За този план"
     about the publisher:                        "За този издател"
     day:                                        "Ден"
-    month:                                      "Месец"
+    month:                                      "Календар"
     publisher:                                  "Издател"
     success widget title:                       "Използвай максимално своя план за четене"
     success blurb:                              "План за четене е най-добрия начин да направиш Божието слово част от своето ежедневие. Почти всеки прави пропуски и затова сме създали няколко помагала."
@@ -524,7 +524,7 @@ bg:
     suggestion html:                            "Може би имахте предвид %{suggestion_link}?"
     all versions:                               "Всички %{language_name} версии"
   donate:
-    donate now:                                 "Направи дарение"
+    donate now:                                 "Направи дарение (САЩ)"
     donate now intl:                            "или направи международно дарение"
     promo 1:                                    "За всеки долар, който дадеш, още 10 човека ще могат да имат достъп до Библията на техните мобилни телефони."
     promo 2:                                    "С YouVersion, Библията е винаги наблизо. Виж видеото."
