--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -33,10 +33,10 @@ de:
   next step connections:                        "Als nächstes: Verbinde deine Konten und finde deine Freunde."
   you are now following:                        "Du folgst jetzt %{username}"
   you are no longer following:                  "Du folgst jetzt %{username} nicht mehr"
-  user follows:                                 "%{username} folgt dir jetzt"
+  user follows:                                 "%{user} folgt dir jetzt"
   user does not follow:                         "%{user} folgt dir nicht."
-  no following found self:                      "Du folgst bisher niemandem. Du solltest die Seite <a href='%{link}> Freunde finden </a> besuchen und Freunde finden!"
-  no followers found self:                      "Es folgt dir bisher niemand. Du solltest die Seite <a href='%{link}> Freunde finden </a> besuchen und Freunde finden!"
+  no following found self:                      "Du folgst bisher niemandem. Du solltest die Seite <a href='%{link}'>Freunde finden</a> besuchen und Freunde finden!"
+  no followers found self:                      "Es folgt dir bisher niemand. Du solltest die Seite <a href='%{link}'>Freunde finden</a> besuchen und Freunde finden!"
   no followers found other:                     "Bisher folgt niemand %{username}."
   no following found other:                     "%{username} folgt bisher niemandem."
   no likes found:                               "%{username} gefällt bisher nichts."
@@ -218,8 +218,8 @@ de:
     edit devices:                               "Verbundene Geräte"
     edit account_existence:                     "Konto löschen"
     delete account button:                      "Mein YouVersion Konto löschen"
-    no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices:                                 "Dein YouVersion-Konto ist nicht mit einem Gerät verbunden."
+    no devices download copy:                   "Die Bibel App basiert auf der Online-Bibel von YouVersion.com und ist eine kostenlose, mobile Bibel, die auf fast allen Smartphones installiert werden kann. Die Bibel App gestattet es ihren Lesern, die Bibel zu lesen, Verse in sozialen Netzwerken zu teilen, Lieblingsschriftstellen mit Lesezeichen zu versehen u.v.m. All das in einem Format, das zu ihrem ständig mobiler werdenden Lebensstil passt. Geh mit deinem Smartphone zu <a href='http://www.youversion.com/download'>youversion.com/download</a>, um die Bibel App herunterzuladen und melde dich einfach mit deinem Konto an!"
     yes delete:                                 "Ja, mein Konto löschen"
     account delete success:                     "Dein YouVersion-Konto wurde erfolgreich gelöscht. Wir hoffen, dass du andere Möglichkeiten nutzen wirst, um dich mit der Bibel zu beschäftigen. Die folgenden Apps beispielsweise könnten dazu hilfreich sein: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Wenn du dein Konto löschst, werden alle deine Informationen, deine gesamte Historie sowie deine persönlichen Eintragungen (wie Notizen, Lesezeichen, Markierungen etc.) innerhalb von YouVersion.com und der Bibel App gelöscht. Diese Aktion kann weder von dir noch von unserem Team rückgängig gemacht werden. Wenn du dir sicher bist, kannst du unten fortfahren."
@@ -358,7 +358,7 @@ de:
       avatar file:                              "Wähle eine Datei für dein Bild aus."
       avatar help:                              "Folgende Bildformate sind möglich: JPG, PNG oder GIF. Dein Bild wird in ein 48x48 Miniaturbild umgewandelt. Die maximale Dateigröße beträgt 1MB."
       picture error:                            "Entschuldigung, es gab einen Fehler, als dein Bild aktualisiert wurde."
-      picture_empty:                            "Bitte wähle ein Bild zum Hochladen."
+      picture_empty:                            "Bitte wähle ein Bild zum Hochladen"
       picture_too_large:                        "Das Bild muss kleiner als 1 Megabyte sein"
       picture_invalid_type:                     "Das Bild muss JPG, PNG oder GIF Format haben."
       picture_creation form errors:             "Folgende(r) Fehler haben das Aktualisiseren deines Bildes verhindert:"
@@ -491,7 +491,7 @@ de:
     reminder off successful:                    "Tägliche Erinnerung wird nicht mehr gesendet."
     email delivery on successful:               "Du erhältst deine tägliche Lektüre jetzt per Email."
     email delivery off successful:              "Die täglichen Leseplan-Mails werden nicht mehr gesendet."
-    email delivery updated successful:          "Email-Versand-Einstellungen wurden aktualisiert."
+    email delivery updated successful:          "Email-Versand-Einstellungen wurden erfolgreich aktualisiert."
     report on successful:                       "Ein Rechenschaftsbericht wird wöchentlich gesendet werden."
     report off successful:                      "Wöchentlicher Rechenschaftbericht wird nicht mehre gesendet."
     catch up successful:                        "Glückwunsch! Jetzt bist du mit deinem Leseplan wieder auf dem Laufenden."
@@ -600,7 +600,7 @@ de:
     h2:                                         "Gottes Wort begleitet dich."
     h3:                                         "YouVersion ist global."
     h3 sub:                                     "In über 100 Sprachen weltweit verfügbar."
-    main:                                       "Zig Millionen Menschen nutzen die Bible App™, um Gottes Wort zu einem Teil ihres täglichen Lebens zu machen. Lade die kostenlose App herunter und greife von überall aus auf deine Lesezeichen, Notizen und Leseplänen zu. Genieße hunderte Bibelversionen, einschließlich Hörbibeln auf deinem mobilen Gerät."
+    main:                                       "Zig Millionen Menschen nutzen die Bibel App™, um Gottes Wort zu einem Teil ihres täglichen Lebens zu machen. Lade die kostenlose App herunter und greife von überall aus auf deine Lesezeichen, Notizen und Leseplänen zu. Genieße hunderte Bibelversionen, einschließlich Hörbibeln auf deinem mobilen Gerät."
     button h4:                                  "Gehe zu youversion.com/download"
     button h4 sub:                              "Auf deinem mobilen Gerät"
     download now:                               "Lade die Bibel App jetzt herunter."
@@ -638,6 +638,6 @@ de:
         small:                                  "Klein"
         medium:                                 "Mittel"
         large:                                  "Groß"
-        highlights:                             "Markierungen:"
+        highlights:                             "Hervorhebungen:"
         on:                                     "An"
         off:                                    "Aus"
