--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -219,7 +219,7 @@ en-GB:
     edit account_existence:                     "Delete Account"
     delete account button:                      "Delete My YouVersion Account"
     no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices download copy:                   "Based on the on-line Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favourite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
     yes delete:                                 "Yes, Delete My Account"
     account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
@@ -549,7 +549,7 @@ en-GB:
     zip:                                        "Post code"
   download ad:
     title:                                      "Download the Free Bible App"
-    line 1:                                     "Hundreds of versions in many"
+    line 1:                                     "Hundreds of versions in 100+"
     line 2:                                     "different languages - the Bible that"
     line 3:                                     "goes with you anywhere."
     download:                                   "Download Now"
@@ -560,7 +560,7 @@ en-GB:
     information revolution copy:                "Over the last decade, the Internet has brought about a revolution which empowers people like never before. With the ability to share, contribute, create, broadcast and communicate, it's easy to express who we are and what we believe with the rest of the world."
     youversion copy:                            "Since its start in 1996, LifeChurch.tv's purpose has been to lead people to become fully devoted followers of Christ. In doing so, we have looked for new ways to help people connect the Bible to their daily lives. Our methods have changed over the years as we've incorporated various technologies and strategies. But at the core, our focus remains on relevancy as we consistently strive to demonstrate and teach people how God's Word relates to everyone, no matter where they are in life."
     youversion copy 2:                          "YouVersion represents a new frontier in LifeChurch.tv's efforts. We aren't just building a tool to impact the world using innovative technology, more importantly, we are engaging people into relationships with God as they discover the relevance the Bible has for their lives."
-    partners title:                             "A Special Thanks to Our Partners"
+    partners title:                             "Bible Publishing Partners"
     partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Our Translation Teams"
     learn more:                                 "Learn More"
