--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -218,8 +218,8 @@ fr:
     edit devices:                               "Appareils connectés"
     edit account_existence:                     "Supprimer mon compte"
     delete account button:                      "Supprimer mon compte YouVersion"
-    no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices:                                 "Aucun appareil n'est relié à votre compte YouVersion"
+    no devices download copy:                   "Basée sur la bible en ligne, YouVersion.com, la Bible App est une application mobile qui peut être installée sur n'importe quel appareil mobile. La Bible App permet aux utilisateurs de lire la Bible, partager des versets sur leurs réseaux sociaux, enregistrer leurs passages préférés et plus &mdash; le tout dans un format compatible avec leur mode de vie de plus en plus mobile. Consultez <a href='http://www.youversion.com/download'>youversion.com/download</a> depuis votre appareil mobile pour télécharger la Bible App et connecter votre compte."
     yes delete:                                 "Oui, supprimer mon compte."
     account delete success:                     "Votre compte YouVersion a été supprimé avec succès . Nous espérons que vous continuerez à trouver des moyens de méditer la Bible.. Certaines de ces applications pourraient vous être utiles à mesure que vous progressez: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Si vous supprimez votre compte, vous éliminer définitivement toutes vos informations, l'histoire, et la personnalisation (comme les notes, signets, surlignages, etc) au sein de YouVersion.com et de l 'App Bible. Cette action ne peut pas être inversée par vous ou par notre équipe. Si vous êtes certain que vous souhaitez progresser, continuez ci-dessous."
@@ -255,7 +255,7 @@ fr:
     forgot password:                            "Mot de passe oublié?"
     resend success:                             "Un mail de confirmation vous a été renvoyé. Merci de consulter votre boîte mail."
     resend error:                               "Désolé il y a eu une erreur lors du renvoi de votre mail de confirmation. Merci de vérifier que vous entrer une adresse mail en cours de validité qui n'a pas encore été confirmée."
-    resend confirmation title:                  "Vous n'avez pas reçu votre mail de confirmation?"
+    resend confirmation title:                  "Vous n'avez pas reçu d'e-mail de confirmation ?"
     resend confirmation copy:                   "Entrez l'adresse mail que vous avez utilisé pour vous enregistrer ci-dessous et nous vous renverrons un autre mail de confirmation."
     resend confirmation button:                 "Renvoi du lien de confirmation."
     privacy:
@@ -268,7 +268,7 @@ fr:
       device id text:                           "Lorsque vous accédez à la Bible App de YouVersion, nous pouvons récupérer votre numéro de série (\"UDID\") ou adresse IP. Nous les utilisons afin de vous apporter une expérience sur-mesure. L'UDID est recensée à des fins statistiques, pour l'analyse de données et aussi pour communiquer plus efficacement avec vous. Nous pourrons associer votre UDID avec des informations tierces dans le but d'optimiser votre expérience avec nous et améliorer notre qualité de service. nous ne partageons aucune donnée personnelle relative à votre UDID avec  des tiers."
       cookies title:                            "Cookies LifeChurch.tv"
       cookies text:                             "Quant vous visitez %{link}, nous pouvons envoyer un ou plus cookies au votre ordinateur, pour que nous puissions identifier seulement votre navigateur. (Un cookie est seulement un petit fichier de texte contenant une chaîne de caractères.) Quand vous acceptez nos cookies vous permettre garder vos préférences de session à la session. Bien que la plupart de navigateurs acceptent les cookies par défaut, vous pouvez ajuster votre navigateur pour refuser tous les cookies, ou pour vous dire quand vous êtes envoyé un cookie. Quelques YouVersion caractéristiques et services ne peuvent pas fonctionner correctement si vous avez les cookies annulées."
-      log title:                                "information d'enregistrement"
+      log title:                                "Information d'enregistrement"
       log text:                                 "Lorsque vous utilisez les services LifeChurch.tv, nos serveurs enregistrent automatiquement les informations que votre navigateur envoie lorsque vous visitez un de nos sites. Ces logs du serveur peuvent contenir des informations telles que votre requête web, adresse de protocole Internet, le type de navigateur, la langue du navigateur, la date et l'heure de votre demande, et un ou plusieurs cookies qui peuvent identifier de manière unique votre navigateur."
       communications title:                     "Communications utilisateur"
       communications text:                      "L'information personel ou demandes que vous soumettez via %{link} seront envoyez à l'administrateur de groupe. L'administrateur de groupe et/ou un de leurs membres aura de l'access à cette information. Quand vous envoyez un mail ou une autre communication à un des LifeChurch.tv sites, nous pouvons maintenez ces transmissions pour traiter vôtres demandes, et pour répondre vôtres pétitions et améliorer nos services."
@@ -284,7 +284,7 @@ fr:
       data integrity text:                      "LifeChurch.tv traite les informations personnelles uniquement pour les buts pour lesquels ont été ressemblées et selon cette Déclaration de Confidentialité ou toute notification d'intimité  pour une service-spécifique. Nous révisons notre collecte de données, stockage et pratiques de traitement pour s'assurer que nous nous rassemblons seulement que nous collectons, stockons et traitons les informations personnelles requises pour fournir ou améliorer nos services. nous prenons étapes raisonnables pour assurer que l'information personnelle que nous traitons est précis, complet et actuel, mais nous dépendons de l'actualisation ou la correction de nos utilisateurs sur leurs informations personnelles touts les fois nécessaire."
       information access title:                 "Accéder et mettre à jour ses données personnelles"
       information access text:                  "Quand vous utilisez aucun service de LifeChurch.tv, nous faisons des efforts de bon foi de vous fournir l'accès a vos informations personnelles et l'opportunité de corriger ces données s'ils sont imprécises ou effacer telles données à votre demande si on ne l'exige pas pour être maintenu par loi ou pour le service légitime. Nous demandons chaque utilisateur de s'identifier  et l'information demandé pour donner de l'accès, de la correction ou pour l'effacer, avant le traitement de ces demandes, et nous pouvons refuser de traiter des demandes qui sont réitérées ou systématiques, q'exigent l'effort technique disproportionné, qui compromettre l'intimité d'autres, ou soyez extrêmement impraticable (par exemple, les demandes au sujet de l'information résidant sur ------), ou pour quel accès "
-      enforcement title:                        "mise en application"
+      enforcement title:                        "Mise en application"
       enforcement text:                         "LifeChurch.tv revoit périodiquement sa conformité avec la Politique de confidentialité. Lorsque nous recevons des plaintes écrites concernant les questions de confidentialité, notre politique est de contacter l'utilisateur plaignant au sujet de ses préoccupations. Nous allons coopérer avec les autorités de réglementation appropriées, y compris les autorités locales de protection des données, afin de résoudre les plaintes concernant le transfert des données personnelles qui ne peuvent pas être résolus entre LifeChurch.tv et un individu."
       questions title:                          "Questions"
       questions text:                           "Toute question concernant notre politique privée peut être adressée à : %{mailto_link}"
@@ -427,7 +427,7 @@ fr:
     about this plan:                            "À propos de ce plan"
     about the publisher:                        "À propos de cet éditeur"
     day:                                        "Jour"
-    month:                                      "Mois"
+    month:                                      "Calendrier"
     publisher:                                  "Éditeur"
     success widget title:                       "Profitez pleinement de vos plans de lecture"
     success blurb:                              "Les plans de lecture sont un excellent moyen pour intégrer la Bible dans votre quotidien. Mais il arrive à tout le monde de prendre parfois du retard. Il est crucial d'entendre ce que Dieu a à nous dire tous les jours, voici donc quelques trucs et astuces pour vous aider à maintenir le cap."
@@ -524,7 +524,7 @@ fr:
     suggestion html:                            "Vous vouliez %{suggestion_link}?"
     all versions:                               "Toutes les traductions en %{language_name}"
   donate:
-    donate now:                                 "Faire un don maintenant"
+    donate now:                                 "Faire un don maintenant (USA)"
     donate now intl:                            "Dons extérieurs aux US"
     promo 1:                                    "Pour chaque dollar donné,10 personnes supplémentaires auront accès à la Bible sur leur téléphone portable."
     promo 2:                                    "Avec YouVersion, la Bible est toujours à portée de main. Regardez notre vidéo."
@@ -549,9 +549,9 @@ fr:
     zip:                                        "Code Postal"
   download ad:
     title:                                      "Télécharger la Bible App gratuite"
-    line 1:                                     "Des centaines de traductions dans"
-    line 2:                                     "Différentes langues - la Bible qui"
-    line 3:                                     "vous suit partout"
+    line 1:                                     "Des centaines de traductions "
+    line 2:                                     "dans plus de 100 langues. La"
+    line 3:                                     "Bible qui vous suit partout."
     download:                                   "Télécharger maintenant"
   about page:
     relevancy:                                  "Pertinence"
@@ -560,7 +560,7 @@ fr:
     information revolution copy:                "Depuis la dernière décennie, internet a révolutionné la vie de millions de personnes comme jamais auparavant. Avec la possibilité de partager, contribuer, créer, diffuser et communiquer, il est aisé d'échanger avec le reste du monde et de leur exprimer ce en quoi nous croyons."
     youversion copy:                            "Depuis ses débuts en 1996, l'objectif de LifeChurch.tv a été d'amener le peuple de Dieu à devenir de véritables et dévoués imitateurs de Christ. Dans cette optique, nous avons cherché de nouveaux moyens leur permettant de connecter la Bible à leur quotidien. Nos méthodes ont évolué au fil des années notamment avec les diverses innovations technologiques et stratégiques. Mais l'essentiel, notre vision, ce que nous tenons à démontrer à tout prix, est la pertinence de la Parole de Dieu: combien Elle est adaptée à la vie de chacun, quelle que soit sa situation."
     youversion copy 2:                          "YouVersion représente une nouvelle étape dans les efforts de LifeChurch.tv. Nous ne développons pas cet outil dans le seul but d'impacter le monde avec une technologie novatrice, en fait nous incitons les gens à s'engager dans une relation avec Dieu en découvrant l'importance de la Bible dans leurs vies."
-    partners title:                             "Nos sincères remerciements à tous nos partenaires"
+    partners title:                             "Sociétés bibliques partenaires"
     partners text:                              "Sans nos généreux partenaires d'édition de la Bible,  YouVersion ne serait tout simplement pas en mesure de fournir autant de Bibles à notre communauté du monde entier. Beaucoup d'entre vous nous ont demandé comment vous pouvez remercier ces supporters vitaux de la mission de YouVersion. Vous pouvez en apprendre plus sur eux, leurs ministères, et sur les façons dont vous pouvez les soutenir à travers les liens ci-dessous."
     translation title:                          "Nos équipes de traduction"
     learn more:                                 "Savoir plus"
@@ -599,7 +599,7 @@ fr:
   mobile page:
     h2:                                         "La Parole de Dieu est avec vous."
     h3:                                         "YouVersion est Planétaire"
-    h3 sub:                                     "Disponible dans des centaines de langues de par le monde."
+    h3 sub:                                     "Disponible dans plus de 100 langues de par le monde."
     main:                                       "Des dizaines de millions de personnes utilisent l'application Bible App™ pour intégrer la Parole de Dieu dans leur quotidien. Télécharger l'application gratuite et accéder à vos favoris, notes et Plans de lecture où que vous vous trouviez. Profitez des centaines de versions disponibles, y compris des versions audio, tout cela à partir de votre appareil mobile."
     button h4:                                  "Aller sur youversion.com/download"
     button h4 sub:                              "Sur votre appareil mobile"
