--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -218,8 +218,8 @@ km:
     edit devices:                               "បាន​ភ្ជាប់​ជាមួយ​ឧបករណ៍"
     edit account_existence:                     "លុប​គណនី"
     delete account button:                      "លុប​គណនី​ YouVersion របស់​ខ្ញុំ"
-    no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices:                                 "មិន​មាន​ឧបករណ៍​បាន​ភ្ជាប់​មក​កាន់​គណនី YouVersion​ របស់​អ្នក​ទេ"
+    no devices download copy:                   "អាស្រ័យ​ទៅ​លើ​ព្រះ​គម្ពីរ​លើ​បណ្ដាញ, YouVersion.com, Bible App ជា​កម្ម​វិធី​ព្រះ​គម្ពីរ​លើ​ឧបករណ៍​ចល័ត​ដែល​អាច​ប្រើ​ប្រាស់​លើ​សឹង​តែ​គ្រប់​ឧបករណ៍​ចល័ត​ទាំង​អស់។ Bible App អនុញ្ញាត្តិ​អោយ​អ្នក​ប្រើ​ប្រាស់​ អាន​ព្រះ​គម្ពីរ, ចែក​រំលែក​ខ​ព្រះ​គម្ពីរ, និង more&mdash; ទាំង​អស់​នៅ​លើ​ទម្រង់​មួយ​ដែល​អាច​អោយ​អ្នក​បន្តប្រើ​លើ​ឧបករណ៍​ចល័ត​បាន​យ៉ាង​ល្អ។ ចូល​មក​កាន់ <a href='http://www.youversion.com/download'>youversion.com/download</a> ពី​ឧបករណ៍​ចល័ត​របស់​អ្នកដើម្បី​ដោនឡូដ Bible App ហើយ​ភ្ជាប់​មក​កាន់​គណនី​របស់​អ្នក"
     yes delete:                                 "បាទ/ចា៎ លុប​គណនី​របស់ខ្ញុំ"
     account delete success:                     "គណនី​ YouVersion ត្រូវ​បាន​លុប​ចេញ​ជា​ស្ថាពរ។ យើង​សង្ឃឹម​ថា​លោក​អ្នក​នឹង​បន្ត​រក​វិធី​ដ៏​មានន័យ​ផ្សេង​ៗ​ក្នុង​ការ​ផ្សារ​ភ្ជាប់​ជាមួយ​ព្រះ​គម្ពីរ។ កម្ម​វិធី​ផ្សេង​ៗ​ទៀត​នឹង​ជួយ​លោក​អ្នក​ក្នុង​ការ​អាន​ព្រះ​គម្ពីរៈ <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "ប្រសិន​បើ​អ្នក​លុប​គណនី​របស់​អ្នក នោះ​អ្នក​នឹង​ត្រូវ​បាន​ដកចេញ​នូវ ព័ត៌មាន, ប្រវត្ត, និង​ការ​រៀប​ចំរបស់​អ្នក​ជា​រៀង​រហូត (ដូច​ជា​កំណត់​ត្រា, កំណត់​ចំណាំ, ការគូស​ពណ៌​ចំណាំ, ។ល។) ដែល​មាន​នៅ​ក្នុង YouVersion.com ហើយនិង Bible App។ ទាំង​នេះ​នឹង​មិន​អាច​ទាញ​ត្រឡប់​មក​វិញ​ដោយ​ខ្លួន​អ្នក ឬ​ក្រុម​របស់​យើង​បាន​ឡើយ។ ប្រសិនបើ​អ្នក​ពិត​ជា​ចង់​មែន​សូម​បន្ត ដំណើរការ​ខាងក្រោម។"
@@ -549,9 +549,9 @@ km:
     zip:                                        "Zip"
   download ad:
     title:                                      "ដោន​ឡូដ​យក​ Bible App ដោយ​ឥត​គិតថ្លៃ"
-    line 1:                                     "ជំនាន់​គម្ពីរ​រាប់​រយ​ដែ​លមាន​ជា"
-    line 2:                                     "ច្រើន​ភាសា- ជា​ព្រះ​គម្ពីរ​ដែល​"
-    line 3:                                     "ទៅ​ជាមួយ​អ្នក​គ្រប់​ទី​កន្លែង"
+    line 1:                                     "ជំនាន់​គម្ពីរ​រាប់​រយ​ក្នុង​ចំណោម 100+"
+    line 2:                                     "ច្រើន​ភាសា- ជា​ព្រះ​គម្ពីរ​"
+    line 3:                                     "ដែល​ទៅ​ជាមួយ​អ្នក​គ្រប់​ទី​កន្លែង"
     download:                                   "ដោន​ឡូដ​យក​ឥឡូវ"
   about page:
     relevancy:                                  "ភាព​ពាក់ពន្ធ័"
@@ -560,7 +560,7 @@ km:
     information revolution copy:                "យូរ​ណាស់​មក​ហើយ អ៊ីន​ធើណែត​នាំ​មក​នូវ​ការ​ផ្លាស់​ប្ដូរ​មួយ​ដែល​ប៉ះ​ពាល់​ដល់​មនុស្ស​យ៉ាង​ខ្លាំង។ ជាមួយ​នឹងលទ្ធ​ភាព​ដែល​អាច​ចែក​រំលែក, អោយ, បង្កើត, ផ្សាយ និង​ទំនាក់​ទំនង វា​ជា​ការ​ងាយ​ស្រួល​ក្នុង​ការ​និយាយ​ថា​យើង​ជា​នរណា ហើយ​នឹង​អ្វី​ដែល​យើង​ជឿ​ទៅ​កាន់​មនុស្ស​នៅ​ជុំ​វិញ​ពិភព​លោក"
     youversion copy:                            "វា​ចាប់​ផ្ដើម​តាំង​ពី​ឆ្នាំ​1996, គោល​បំណង​របស់ LifeChurch.tv​ គឺជួយ​ដឹកនាំ​មនុស្ស​អោយ​ដើរ​តាម​ព្រះយេស៊ូ​គ្រីស្ត​យ៉ាង​ពេញ​ទំហឹង។ ដើម្បី​ធ្វើ​បាន​ដូច្នេះ យើង​រក​មើល​នូវ​របៀប​ថ្មីៗ​ជាច្រើន​ក្នុង​ការ​ជួយ​មនុស្ស​អោយ​ផ្សារភ្ជាប់​ជាមួយ​នឹង​ព្រះគម្ពីរ​នៅ​ក្នុង​ជីវិតរស់​នៅ​ប្រចាំ​ថ្ងៃ​របស់​ពួក​គេ។ វិធីសាស្ត្រ​របស់​យើង​ត្រូវ​បាន​ផ្លាស់​ប្ដូរ​ជា​ច្រើន ហើយ​យើង​ធ្វើ​ការ​សហប្រតិបត្តិការណ៍​ជាមួយ​នឹង​ប្រពន្ធ័តិចណូឡូជី និង​យុត្តសាស្ត្រ​ជា​ច្រើន​ផង​ដែរ។ ប៉ុន្តែរឿង​ដែល​សំខាន់ គឺ​ការ​តាំងចិត្ត​របស់​យើង​នៅ​តែ​មាន​ដដែល ដោយ​យើង​បាន​ព្យាយាម​គ្រប់​យ៉ាង ហើយ​បង្រៀន​មនុស្ស​ពី​ព្រះ​បន្ទូល​របស់​ព្រះជាម្ចាស់ ដែល​ទាក់​ទង​ទៅ​នឹង​មនុស្ស ទោះ​គេ​នៅ​ទី​ណា​ក៏​ដោយ​ចុះ។"
     youversion copy 2:                          "YouVersion តំណាង​អោយព្រំ​ដែន​ថ្មី​នៅ​ក្នុងកិច្ច​ខំ​ប្រឹង​ប្រែង​របស់ LifeChurch.tv។ យើ​ង​មិន​គ្រាន់​តែ​កសាង​នូវ​ឧបករណ៍​ដែល​ប៉ះពាល់​ដល់​ពិភព​លោក​ ដោយ​ប្រើ​ប្រាស់​នូវ​ប្រពន្ធ័តិចណូឡូជី​ទេ ដែល​សំខាន់​ជាង​នោះ​គឺ​យើង​ចង់​ផ្សាភ្ជាប់​មនុស្ស​ទៅកាន់​ទំនាក់​ទំនង​ជាមួយ​នឹង​ព្រះ ក្នុង​កំឡុង​ពេល​ដែល​ពួក​គេ​ស្វែង​រក​ព្រះគម្ពីរ​ដែល​អាច​យល់​នៅ​ក្នុង​ជីវិត​របស់​ពួក​គេ។"
-    partners title:                             "អរគុណ​ជាពិសេស​ដល់​ដៃគូររបស់​យើង"
+    partners title:                             "ដៃ​គូរក្នុង​ការ​បោះ​ផ្សាយ"
     partners text:                              "ជាមួយ​ក្រុម​ដៃ​គូរ​បោះ​ផ្សាយ​ព្រះ​គម្ពីរ​របស់​យើង, YouVersion នឹង​មិន​អាច​ផ្ដល់​ជូន​នូវ​ភាព​ទូលំទូលាយ​នៃ​សហគមន៍​ព្រះ​គម្ពីរ​ជា​ច្រើននោះ​ទេ។ លោក​អ្នក​ភាគ​ច្រើន​សួរ​ថា តើ​យើង​អាច​អរគុណ​ដល់​ក្រុម​អ្នក​ផ្គត់​ផ្គង់​ក៏​មាន​តម្លៃ​របស់បេសកកម្ម​ YouVersion ដោយ​របៀប​ណាទៅ។ លោក​អ្នក​អាច​រៀន​បាន​ច្រើន​ថែម​ទៀត​ពី​ពួក​គេ, ពន្ធ័កិច្ច​ពួក​គេ និង​របៀប​ដែល​អ្នក​អាច​គាំ​ទ្រ​ពួក​គេ​តាម​រយះ​តំណរ​ភ្ជាប់​ខាង​ក្រោម។"
     translation title:                          "ក្រុម​បក​ប្រែ​របស់​យើង"
     learn more:                                 "រៀន​ថែម​ទៀត"
@@ -599,7 +599,7 @@ km:
   mobile page:
     h2:                                         "ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់​គឺ​នៅ​ជាមួយ​អ្នក"
     h3:                                         "YouVersion គឺជា​សកល"
-    h3 sub:                                     "មាន​រាប់​រយ​ភាសា​ពេញ​ពិភព​លោក"
+    h3 sub:                                     "មាន​ជា​ច្រើន​100ភាសា​ក្នុង​សកល​លោក"
     main:                                       "មនុស្ស​ដប់​លាន​អ្នក​កំពុង​ប្រើ​ប្ាស់ Bible App&trade; ដើម្បី​ធ្វើ​អោយ​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់​ជា​ផ្នែក​មួយ​នៅ​ក្នុង​ជីវិតរស់​នៅ​របស់​គេ។ ដោន​ឡូដ​កម្មវិធី​ដោយ​ឥត​គិត​ថ្លៃ​ហើយ​ចូល​ទៅ​កាន់​កំណត់​ចំណាំ, កំណត់​ត្រា, និង​គំរោង​អានគម្ពីរ​ពី​គ្រប់​ទៅ​កន្លែង។ សប្បាយ​ជាមួយ​នឹង​ជំនាន់​គម្ពីរ​រាប់​រយ រូម​បញ្ចូល​ទាំង​សំលេង​នៅ​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
     button h4:                                  "ទៅកាន់ youversion.com/download"
     button h4 sub:                              "​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
