--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -45,7 +45,7 @@ sk:
   no badges found yourself:                     "Zatiaľ ste nezískali žiadne odznaky."
   no badges found other:                        "Používateľ %{username} zatiaľ nezískal žiadne odznaky."
   see users badges:                             "Zobraziť všetky odznaky používateľa %{username}"
-  followers:                                    "Nalsedovníci"
+  followers:                                    "Nasledovníci"
   following:                                    "Nasledovaní"
   highlight:                                    "Zvýrazniť"
   bookmark:                                     "Pridať záložku"
@@ -218,8 +218,8 @@ sk:
     edit devices:                               "Prepojené zariadenia"
     edit account_existence:                     "Zmazať účet"
     delete account button:                      "Zmazať môj YouVersion účet"
-    no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices:                                 "K vášmu YouVersion účtu nie sú pripojené žiadne zariadenia"
+    no devices download copy:                   "Aplikácia Biblia je bezplatná mobilná Biblia, založená na online Biblii YouVersion.com, ktorá môže byť nainštalovaná na takmer všetky mobilné zariadenia. Aplikácia Biblia používateľom umožňuje čítať Bibliu, zdieľať verše na sociálne siete, označiť si obľúbené pasáže a oveľa viac&mdash;to všetko spôsobom, ktorý drží krok so vzrastajúcim mobilným životným štýlom. Navštívte <a href='http://www.youversion.com/download'>youversion.com/download</a> z vášho mobilného zariadenia, stiahnite si aplikáciu Biblia a pripojte sa so svojim účtom!"
     yes delete:                                 "Áno, zmazať môj účet"
     account delete success:                     "Váš YouVersion účet bol úspešne zmazaný. Dúfame, že si aj naďalej nájdete spôsob, ako čerpať z Biblie. Môžu vám k tomu napomôcť niektoré z týchto aplikácií: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Ak zmažete váš účet, tak navždy stratíte všetky vaše údaje (poznámky, históriu, záložky, zvýraznenia atď.) na YouVersion.com a v aplikácii Biblia. Táto akcia sa nedá vrátiť späť. Ak ste si istý, že chcete pokračovať, urobte tak nižšie."
