--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -4,7 +4,7 @@ sq:
   celebrating 50MM:                             "Duke festuar 50 milion instalime të programit!"
   link:                                         "Lidhje"
   site search:                                  "Kërkim në YouVersion"
-  auth error:                                   "Më vjen keq, pati një problem me emrin tuaj të përdoruesit ose fjalëkalimin. Ju lutemi, hyni tek YouVersion për të vazhduar."
+  auth error:                                   "Më vjen keq, pati një problem me emrin tuaj të përdoruesit ose fjalëkalimin. Ju lutemi, hyni te YouVersion për të vazhduar."
   download:                                     "Shkarko"
   visit link:                                   "Vizito hallkën lidhëse"
   about title:                                  "Rreth YouVersion"
@@ -24,32 +24,32 @@ sq:
   error unfollowing user:                       "Më vjen keq, pati një gabim në ç'ndjekjen e atij përdoruesi."
   google plus:                                  "Google +"
   connect to:                                   "Lidhuni me llogarinë tuaj %{connection}"
-  connected as user:                            "Ju jeni lidhur tek %{connection} si %{username}."
-  deleted connection:                           "Lidhja juaj tek %{connection} u shkëput suksesshëm."
-  deleted connection error:                     "Më vjen keq, pati një gabim në shkëputjen e lidhjes tuaj tek %{connection}."
+  connected as user:                            "Ju jeni lidhur te %{connection} si %{username}."
+  deleted connection:                           "Lidhja juaj te %{connection} u shkëput suksesshëm."
+  deleted connection error:                     "Më vjen keq, pati një gabim në shkëputjen e lidhjes tuaj te %{connection}."
   remove connection:                            "Fshij"
   connection users:                             "Këtu janë disa përdorues të YouVersion me të cilët jeni të lidhur në %{connection}:"
   connection marketing:                         "YouVersion ka më shumë argëtim me miqtë. Lidhni llogarinë tuaj të YouVersion me rrjetet tuaja të tjera sociale dhe menjëherë gjeni dhe ndiqni miqtë tuaj në YouVersion. Lidhja e llogarive tuaja gjithashtu ju mundëson të ndani përmbajtje me vetëm disa klikime. Ne nuk do të postojmë kurrë diçka pa miratimin tuaj."
   next step connections:                        "Më pas: Lidhni llogaritë tuaja dhe gjeni miqtë tuaj"
-  you are now following:                        "Ju jeni tani duke ndjekur %{username}"
-  you are no longer following:                  "Ju nuk jeni duke ndjekur më %{username}"
+  you are now following:                        "Ju jeni tani duke ndjekur përdoruesin %{username}"
+  you are no longer following:                  "Ju nuk jeni duke ndjekur më përdoruesin %{username}"
   user follows:                                 "%{user} po ju ndjek ju."
   user does not follow:                         "%{user} nuk po ju ndjek ju."
   no following found self:                      "Ju nuk jeni duke ndjekur dikë ende. Vizitoni faqen <a href='%{link}'>Gjej Miq</a> dhe gjeni disa miq!"
   no followers found self:                      "Ju nuk keni ende ndonjë ndjekës. Vizitoni faqen <a href='%{link}'>Gjej Miq</a> dhe gjeni disa miq!"
-  no followers found other:                     "Askush nuk është duke e ndjekur %{username} ende."
-  no following found other:                     "%{username} nuk ëshë duke ndjekur askënd. "
-  no likes found:                               "%{username} nuk ka pëlqyer akoma ndonjë gjë."
-  no notes found:                               "%{username} nuk ka ndonjë shënim."
-  no recent activity:                           "%{username} nuk ka ndonjë aktivitet të fundit."
+  no followers found other:                     "Askush nuk është duke e ndjekur akoma përdoruesin %{username}."
+  no following found other:                     "Përdoruesi %{username} nuk ëshë duke ndjekur askënd. "
+  no likes found:                               "Përdoruesi %{username} nuk ka pëlqyer akoma ndonjë gjë."
+  no notes found:                               "Përdoruesi %{username} nuk ka ndonjë shënim."
+  no recent activity:                           "Përdoruesi %{username} nuk ka ndonjë aktivitet të fundit."
   no badges found yourself:                     "Ju nuk keni fituar akoma ndonjë emblemë."
-  no badges found other:                        "%{username} nuk ka fituar akoma ndonjë emblemë."
-  see users badges:                             "Shiko të gjitha emblemat e %{username}"
+  no badges found other:                        "Përdoruesi %{username} nuk ka fituar akoma ndonjë emblemë."
+  see users badges:                             "Shiko të gjitha emblemat e përdoruesit %{username}"
   followers:                                    "Ndjekës"
   following:                                    "Të ndjekur"
   highlight:                                    "Thekso"
   bookmark:                                     "Shëno"
-  earned badge date:                            "Fituar nga %{username} %{ago} më parë"
+  earned badge date:                            "Fituar nga përdoruesi %{username} %{ago} më parë"
   badges title:                                 "Emblema"
   currently selected:                           "Aktualisht i përzgjedhur:"
   read reference:                               "Lexo %{reference}"
@@ -73,7 +73,7 @@ sq:
   username or email prompt:                     "Emri i përdoruesit (ose E-posta)"
   password prompt:                              "Fjalëkalimi"
   sign in:                                      "Hyr"
-  sign in to youversion:                        "Hyr tek YouVersion"
+  sign in to youversion:                        "Hyr te YouVersion"
   remove:                                       "Fshij"
   confirm danger:                               "Po, jam i/e sigurt"
   registered ago:                               "Regjistruar %{time_ago} më parë"
@@ -98,7 +98,7 @@ sq:
   search:                                       "Kërko"
   book:                                         "Libri"
   try the beta:                                 "Provoni versionin Beta"
-  welcome to the beta:                          "Mirë se vini tek YouVersion.com i ri!"
+  welcome to the beta:                          "Mirë se vini te YouVersion.com i ri!"
   selected:                                     "I përzgjedhur"
   chapter:                                      "Kapitulli"
   bible:                                        "Bibla"
@@ -202,7 +202,7 @@ sq:
     recent activity:                            "Aktiviteti i fundit"
     my recent_activity:                         "Aktiviteti im i fundit"
     started following:                          "Filloi të ndjekë"
-    subscribed to plan:                         "Përdorues të abonuar tek %{plan}"
+    subscribed to plan:                         "Përdorues të abonuar te %{plan}"
     reading:                                    "Përdoruesit që po lexojnë këtë plan"
     subscribed previously:                      "Filluar %{time_ago} më parë"
     sign in for settings:                       "Ju lutem hyni për të përdorur profilin tuaj."
@@ -218,8 +218,8 @@ sq:
     edit devices:                               "Pajisjet e lidhura"
     edit account_existence:                     "Fshij llogarinë"
     delete account button:                      "Fshije llogarinë time YouVersion"
-    no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices:                                 "Asnjë pajisje nuk është e lidhur me llogarinë tuaj YouVersion"
+    no devices download copy:                   "Bazuar në Biblën online, YouVersion.com, Programi i Biblës është një Bibël falas lëvizëse që mund të instalohet pothuaj në çdo aparat celular. Programi i Biblës u jep mundësi përdoruesve të lexojnë Biblën, të ndajnë vargje me rrjetet e tyre sociale, të shënojnë pjesët e tyre të preferuara dhe më tepër&mdash;të gjitha në një format që ecën bashkë me mënyrën e tyre lëvizëse të jetës. Vizitoni <a href='http://www.youversion.com/download'>youversion.com/download</a> nga aparati tuaj i celularit për të shkarkuar Programin e Biblës dhe për të lidhur llogarinë tuaj!"
     yes delete:                                 "Po, fshije llogarinë time"
     account delete success:                     "Llogaria juaj YouVersion është fshirë në mënyrë të suksesshme. Ne shpresojmë që ju do të vazhdoni të gjeni mënyra domethënëse për të ndërvepruar me Biblën. Disa nga këto programe mund të jenë ndihmuese ndërsa ecni përpara: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Nëse e fshini llogarinë tuaj, ju do të eleminoni përgjithmonë të gjithë informacionin tuaj, historinë dhe personalizimet (si p.sh, shënimet, shenjuesit, theksimet etj.) brenda YouVersion.com dhe Programit të Biblës. Ky veprim nuk mund të kthehet mbrapsht nga ju apo ekipi ynë. Nëse jeni të sigurtë të ecni përpara, vazhdoni më poshtë."
@@ -390,7 +390,7 @@ sq:
     labels label:                               "Etiketat:"
     title:                                      "Shenjuesit"
     not found:                                  "Shenjuesit ju japin ju një referencë udhërrëfyese të shpejtë për pasazhet tuaja të preferuara apo për kapitullin e fundit që lexoni në një libër të caktuar. Për të shtuar një shenjues, përzgjidhni një varg në lexuesin e Biblës dhe më pas klikoni butonin Përzgjedhës në krye të lexuesit."
-    other user not found:                       "%{username} nuk ka ruajtur ende asnjë shenjues."
+    other user not found:                       "Përdoruesi %{username} nuk ka ruajtur ende asnjë shenjues."
     successfully created:                       "Shenjuesi u shtua"
     successfully deleted:                       "Shenjuesi u fshi"
     labels placeholder:                         "Ndaji etiketat e shumta me një presje."
@@ -432,9 +432,9 @@ sq:
     success widget title:                       "Arrini maksimumin e planit të leximit tuaj"
     success blurb:                              "Planet e leximit janë mënyra më e mirë për ta bërë Fjalën e Perëndisë pjesë të jetës suaj të përditshme. Por thuajse të gjithë mbeten mbrapa herë pas here. Të dëgjosh çfarë Perëndia do të na thotë çdo ditë është e rëndësishme, prandaj ne kemi vendosur së bashku disa këshilla për t'ju ndihmuar të qëndroni në rrugën e duhur. "
     success blog link title:                    "Lexo postimet e blogut"
-    a users plans:                              "Planet e %{username}"
+    a users plans:                              "Planet e përdoruesit %{username}"
     you have no plans:                          "Ju nuk jeni të abonuar në ndonjë plan leximi për momentin."
-    no public plans:                            "Asnjë plan leximi nuk është i dukshëm për %{username}."
+    no public plans:                            "Asnjë plan leximi nuk është i dukshëm për përdoruesin %{username}."
     filter by lang:                             "Filtro planet sipas gjuhës"
     settings:                                   "Cilësimet"
     search:                                     "Kërko"
@@ -483,8 +483,8 @@ sq:
     email edit:                                 "Redakto"
     unsubscribe successful:                     "Ju u hoqët nga ky plan."
     already subscribed:                         "Ju jeni tashmë të abonuar në këtë plan!"
-    partner added successful:                   "Sukses! %{username} është shtuar në përgjegjësinë e planit."
-    partner removed successful:                 "%{username} është hequr nga përgjegjësia e planit."
+    partner added successful:                   "Sukses! Përdoruesi %{username} është shtuar në përgjegjësinë e planit."
+    partner removed successful:                 "Përdoruesi %{username} është hequr nga përgjegjësia e planit."
     make public successful:                     "Sukses! Plani yt është publik."
     make private successful:                    "Plani yt tani është privat."
     reminder on successful:                     "Sukses! E-postat e përditshme kujtuese do të dërgohen."
@@ -510,7 +510,7 @@ sq:
     note blurb:                                 "Me sa duket ju dëshironi të mbani shënime rreth shkrimit. Mendim i mirë! Shënimet ju ndihmojnë të mbani mend dhe organizoni të vërtetën që zbuloni në Fjalën e Perëndisë. Hyni ose krijoni një llogari më poshtë dhe filloni!"
   audio:
     none:                                       "Më vjen keq, audio nuk është e disponueshme për këtë version."
-    chapter only:                               "Më vjen keq, audio nuk është e disponueshme për vargjet. Shihni tek lexuesi për kapitujt me audio."
+    chapter only:                               "Më vjen keq, audio nuk është e disponueshme për vargjet. Shihni te lexuesi për kapitujt me audio."
     close player menu:                          "Mbyll"
   highlights:
     creation error:                             "Fillo këtë plan"
@@ -531,7 +531,7 @@ sq:
     promo 3:                                    "Këtë vit, më shumë se 5 miliardë njerëz do të përdorin një telefon celular. Dhuroni tani."
     headline:                                   "Gjithësecili ka nevojë për Fjalën e Perëndisë."
     subhead:                                    "Ndihmoni njerëzit rreth e rrotull botës për ta patur Biblën në majat e gishtave."
-    copy:                                       "Imagjinoni nëse mund t'u jepnit të gjithëve në botë një Bibël falas. Kur ju jepni tek YouVersion, ju mund të bëni pikërisht këtë. Ne jetojmë në një kohë për të cilën të tjerët endërruan &ndash; kur çdonjëri me një telefon mund të përdorë Biblën dhe të përjetojë historinë e dashurisë së Perëndisë për ne. Me mbështetjen tuaj, ne mund të vazhdojmë të ndihmojmë më shumë njerëz që të kalojnë më shumë kohë në Shkrimin."
+    copy:                                       "Imagjinoni nëse mund t'u jepnit të gjithëve në botë një Bibël falas. Kur ju jepni te YouVersion, ju mund të bëni pikërisht këtë. Ne jetojmë në një kohë për të cilën të tjerët endërruan &ndash; kur çdonjëri me një telefon mund të përdorë Biblën dhe të përjetojë historinë e dashurisë së Perëndisë për ne. Me mbështetjen tuaj, ne mund të vazhdojmë të ndihmojmë më shumë njerëz që të kalojnë më shumë kohë në Shkrimin."
     amount:                                     "Shuma e dhurimit (USD)"
     name:                                       "Emri juaj"
     card number:                                "Numri i kartës së kreditit"
@@ -601,7 +601,7 @@ sq:
     h3:                                         "YouVersion është Global"
     h3 sub:                                     "E disponueshme në më shumë se 100 gjuhë në mbarë botën."
     main:                                       "Dhjetëra miliona njerëz po përdorin Programin e Biblës&trade; për ta bërë Fjalën e Perëndisë pjesë të jetës së tyre të përditshme. Shkarko programin falas dhe përdor shenjuesit e tu, shënimet dhe planet e leximit kudo. Shijo qindra versione, duke përfshirë ato audio, në aparatin tuaj celular."
-    button h4:                                  "Shkoni tek youversion.com/download"
+    button h4:                                  "Shkoni te youversion.com/download"
     button h4 sub:                              "Në telefonin tuaj celular"
     download now:                               "Shkarko Programin e Biblës tani"
     what people:                                "Çfarë njerëzit janë duke thënë rreth programit falas të Biblës..."
