--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -218,8 +218,8 @@ tr:
     edit devices:                               "Bağlı Mobil Cihazlar"
     edit account_existence:                     "Hesabı sil."
     delete account button:                      "YouVersion Hesabımı Sil"
-    no devices:                                 "No devices connected to your YouVersion Account"
-    no devices download copy:                   "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices:                                 "YouVersion hesabınıza bağlı olan herhangi bir mobil cihaz bulunmadı."
+    no devices download copy:                   "Kutsak Kitap Uygulaması YouVersion.com’daki on-line Kutsal Kitap yazılımını baz alan bedavaya indirebileceğiniz bir uygulamadır. Az daha tüm mobil cihazlarda çalışır. Kutsal Kitap Uygulamasını kullanarak, kullanıcılar Kutsal Kitap'ı okuyup, sosyal ağlarında ayet paylaşabilir, sevdikleri bölümlerin yer imlerini yaratabilir, ve daha neler neler yapabilir! Ve bunların hepsi giderek daha gezgin olan hayat tarzımıza uygun bir şekilde yapılabilir. Uygulamayı indirmek ve hesabınıza bağlamak için mobil cihazınızdan <a href='http://www.youversion.com/download'>youversion.com/download</a> web adresini ziyaret edin."
     yes delete:                                 "Evet, Hesabım Silinsin"
     account delete success:                     "YouVersion hesabınız başarıyla silinmiştir. Kutsal Kitap'ta anlamlı vakit geçirmek için başka yollar keşfedip kullandığınıza umut ederiz. Belki şu linkteki uygulamalar size yardımcı olabilir: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "Hesabnızı silerseniz, YouVersion sitesinde ve Kutsal Kitap Uygulamasında kayıtlı olan bilgilerinizin hepsini (notlarınız, yer imleriniz, vurgularınız v.s.) temelli olarak silinecektir. Bu hareket ne sizin tarafınızdan ne de bizim tarafımızdan geri alınabilir. Bunu yapmak istediğinizden emin iseniz, aşağıdan devam edebilirsiniz."
@@ -388,13 +388,13 @@ tr:
     labels:                                     "Etiketler"
     all:                                        "Hepsi"
     labels label:                               "Etiketler:"
-    title:                                      "Yer imleri"
+    title:                                      "Yer İmleri"
     not found:                                  "Yer imleri en sevdiğiniz ayetleri veya herhangi bir kitapta son okuduğunuz bölümü çabukça bulmanızı sağlar. Yer imi nasıl eklenir: Kutsal Kitap Okuyucusunda bir ayet seçin. Ondan sonra okuyucunun araç çubuğundaki Şeçili düğmesini tıklayın."
     other user not found:                       "%{username} henüz yer imi kaydetmedi."
     successfully created:                       "Yer İmi Eklendi"
     successfully deleted:                       "Yer İmi Silindi"
     labels placeholder:                         "Etiketleri virgüller ile ayırın."
-    save:                                       "Yer İmi Kaydet"
+    save:                                       "Yer İmini Kaydet"
     confirm delete:                             "Evet, eminim"
     loading:                                    "Yer imleriniz yükleniyor..."
     edit bookmark:                              "Yer İmini Düzenle"
@@ -415,9 +415,9 @@ tr:
     all:                                        "Tüm"
     all plans:                                  "Tüm Okuma Planları"
     all category plans:                         "%{category} Okuma Planların Tümü"
-    my plans:                                   "Okuma Planlarım"
+    my plans:                                   "Planlarım"
     none found:                                 "Girdiğiniz kriterlere uygun bir Okuma Planını bulamadık. Arama kriterlerinizi genişletmeye deneyin."
-    about publisher:                            "Yayıncı Hakkında"
+    about publisher:                            "Yayımcı Hakkında"
     overview:                                   "Okuma Planına Genel Bakış"
     start:                                      "Okuma Planına Başla"
     length field:                               "Okuma Planın Uzunluğu:"
@@ -427,7 +427,7 @@ tr:
     about this plan:                            "Okuma Planı Hakkında"
     about the publisher:                        "Yayıncı Hakkında"
     day:                                        "Gün"
-    month:                                      "Ay"
+    month:                                      "Takvim"
     publisher:                                  "Yayıncı"
     success widget title:                       "Okuma Planınızdan En İyi Şekilde Yararlanın"
     success blurb:                              "Okuma Planları Tanrı'nın sözünü hayatınızın bir parçasına dönüştürmek için en iyi yöntemlerden biridir. Ama herkes ara sırada geride kalır. Tanrı'nın bize günbegün ne söylemek istediğini öğrenmek çok önemlidir. Bundan dolayı size yardımcı olmak için birkaç öneride bulunmak istiyoruz."
@@ -525,7 +525,7 @@ tr:
     all versions:                               "%{language_name} Dilinde Tüm Çeviriler"
   donate:
     donate now:                                 "Bağışta Bulun (ABD)"
-    donate now intl:                            "veya uluslararası bağış"
+    donate now intl:                            "uluslararası bağış"
     promo 1:                                    "Verdiğiniz her $1 on kişinin mobil cihazlarında Kutsal Kitap'ı okuyabilmelerini sağlar."
     promo 2:                                    "YouVersion ile Kutsal Kitap hep yanınızdadır. Videoyu seyredin."
     promo 3:                                    "Bu yıl 5 milyar insan cep telefonu kullanacak. Bağışta Bulunun."
@@ -549,9 +549,9 @@ tr:
     zip:                                        "Posta Kodu"
   download ad:
     title:                                      "Kutsal Kitap Uygulamasını Bedavaya İndirin"
-    line 1:                                     "Sizinle her yere giden"
-    line 2:                                     "Kutsal Kitap"
-    line 3:                                     "Yüzlerce dilde değişik çeviri."
+    line 1:                                     "Yüzden fazla dilde yüzlerce"
+    line 2:                                     "değişik çeviriyi içeren, sizinle"
+    line 3:                                     "her yere gidebilen Kutsal Kitap."
     download:                                   "Hemen İndir"
   about page:
     relevancy:                                  "Kutsal Kitap’a Ulaşmak"
@@ -560,7 +560,7 @@ tr:
     information revolution copy:                "Son on yıl içinde İnternet, bilginin nasıl aktarıldığına dair bir devrim yarattı. Bu imkânlar önceki çağlarda hayal edilemezdi. İnsanlar artık her türlü bilgiye ulaşabilir. Bilgi paylaşmak, katkıda bulunmak, yaratmak, yayımlamak ve haberleşmek inanılmaz bir şekilde basitleşti. Kişiliğimizi ve inancımızı dünyaya açıklamak artık çok kolay!"
     youversion copy:                            "1996’da kurulan LifeChurch.tv, insanları kendilerini İsa Mesih’e tamamen adamalarına teşvik etmeyi kendisine hedef almıştır. Bu hedefi gerçekleştirmeye çabalarken, insanlara Kutsal Kitap’ı günlük hayatlarının bir parçası haline getirmek için yollar ve yöntemler yarattık. Yöntemlerimiz geçen yıllarda yeni teknolojileri ve yeni fikirleri sahiplendi. Ama temel odak noktamız öğretilerimizin günlük hayatla ilgili olmalarıdır. Durmadan, kim olursanız olun, Tanrı’nın Sözü’nün herkes için olduğunu ispat edip öğretiriz."
     youversion copy 2:                          "YouVersion, LifeChurch.tv’nin çabalarında yeni bir atılımdır. Hedefimiz sadece yenilikçi bir teknolojiyi kullanarak dünyayı etkileyecek bir sistem kurmak değildir. Bizim için önemli olan şudur: İnsanlara Kutsal Kitap’ın hayatlarıyla ilgililiğini gösterip onlara Tanrı ile bir ilişki kurmalarına yardım etmektir."
-    partners title:                             "Ortaklarımıza Özel Bir Teşekkür"
+    partners title:                             "Kutsal Kitap Yayımcı Ortaklarımız"
     partners text:                              "Cömert Kutsal Kitap yayımcı dostlarımız olmasaydı, YouVersion'ın dünya toplumuna bu kadar Kutsal Kitap çevirisini sunmak mümkün olmazdı. Birçoğunuz, bu önemli destekçilerimize nasıl müteşekkir olabileceğinizi sordunuz. Yayımcı dostlarımız, hizmetleri ve sizin onları nasıl destekleyebileceğinize dair daha bilgi edinmek için aşağıdaki linklere göz atabilirsiniz."
     translation title:                          "Tercüme Takımları"
     learn more:                                 "Daha Bilgi"
@@ -599,7 +599,7 @@ tr:
   mobile page:
     h2:                                         "Tanrı’nın Sözü hep yanınızda"
     h3:                                         "YouVersion Globaldir"
-    h3 sub:                                     "Dünya çapında yüzlerce dilde mevcut."
+    h3 sub:                                     "Dünya çapında yüzden fazla dilde mevcut."
     main:                                       "On milyonlarca insan Kutsal Kitap Uygulaması'nı kullanıyor ve Tanrı'nın Sözü'nü hayatlarının bir parçası haline getiriyor. Uygulamayı bedavaya indirip her yerden yer imlerinize, notlarınıza ve okuma planlarınıza ulaşın. Mobil cihazınızı kullanarak Kutsal Kitap'ın yüzlerce çevirisini okuyun ve dinleyin."
     button h4:                                  "youversion.com/download"
     button h4 sub:                              "Mobil Cihazınızda yukarıdaki adresi ziyaret edin"
