--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -212,7 +212,7 @@ zh-CN:
     my password:                                "更改密码"
     edit password:                              "更改密码"
     picture:                                    "相片"
-    edit picture:                               "抱歉，无法取消高亮显示。"
+    edit picture:                               "更换照片"
     edit notifications:                         "管理通知"
     edit connections:                           "连接的账户"
     edit devices:                               "连接的设备"
@@ -352,7 +352,7 @@ zh-CN:
       language:                                 "语言"
       updated:                                  "您已经成功地更新了您的个人资料。"
       error:                                    "对不起，在更新您的个人资料时出错。"
-      current password:                         "平行"
+      current password:                         "目前密码"
       new password:                             "新的密码"
       confirm password:                         "确认密码"
       avatar file:                              "选择一个文件作为您的头像"
