--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -549,8 +549,8 @@ zh-TW:
     zip:                                        "郵編"
   download ad:
     title:                                      "免費下載聖經軟體"
-    line 1:                                     "上百種不同的版本"
-    line 2:                                     "和不同的語言 —— 這聖經"
+    line 1:                                     "幾百種不同的版本"
+    line 2:                                     "上百種不同的語言 —— 這聖經"
     line 3:                                     "都能隨身跟着您"
     download:                                   "現在就下載"
   about page:
