--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,7 +180,7 @@ en:
     select another chapter:                     "Pick a Different Chapter"
     view in reader:                             "View %{reference} in Reader"
   users:
-    reset connection:                           "Sorry, an error has occurred. Please disconnect and reconnect this connection."
+    reset connection:                           "Sorry, an error has occurred. Please remove and then reconnect this connection."
     settings:                                   "Settings"
     no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
     creation form errors:                       "The following error(s) prevented creation of your account:"
